@@ -38,11 +38,11 @@ combine staves in scores and insert cue-notes from other parts.
 <dt>Automated layout</dt>
 <dd>
 
-We put our expertise is in the program, so you do not have to worry
-about layout. LilyPond produces ready-to-print PDF files, determining
-spacing by itself and breaking lines to provide tight but uniform page
-layout.  Clashes between lyrics, notes, and chords are resolved and
-slurs and beams are sloped, <em>automatically</em>!
+We put our expertise is in the program, so you tuning output is almost
+never necessary. LilyPond determines spacing by itself, and breaks
+lines and pages to provide tight but uniform layout.  Clashes between
+lyrics, notes, and chords are resolved and slurs and beams are sloped,
+<em>automatically</em>!
 
 
 <dt>Finest classical engraving available</dt> <img
