@@ -1,5 +1,7 @@
 2004-10-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/switch/advantages.html (src): revise.
+
 	* site/download/index.html: add SUSE 2.0, 2.2
 
 	* scripts/format-page.py: restrict eval with {}. 
